# shared-memory-server

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  client.cpp  cmake_install.cmake  server.cpp
src/common/: shared_memory.cpp  shared_memory.hpp
src/server/: handlers.cpp  handlers.hpp  server.cpp
